Adds new merchShipZone table and shipZone foreign key and bumps the version to 2.4.0

--- a/src/Merchello.Core/Merchello.Core.csproj
+++ b/src/Merchello.Core/Merchello.Core.csproj
@@ -399,6 +399,8 @@
     <Compile Include="Strategies\Itemization\InvoiceItemizationExtensions.cs" />
     <Compile Include="Strategies\Itemization\InvoiceItemizationStrategyBase.cs" />
     <Compile Include="Strategies\Itemization\ProductBasedTaxationVisitor.cs" />
+    <Compile Include="Persistence\Migrations\Upgrades\TargetVersionTwoFourZero\AddShipZoneKeyColumn.cs" />
+    <Compile Include="Persistence\Migrations\Upgrades\TargetVersionTwoFourZero\CreateShipZoneTable.cs" />
     <Compile Include="Trees\FirstByValueTreeNodeVisitor.cs" />
     <Compile Include="Trees\ITreeNodeVisitor.cs" />
     <Compile Include="Trees\NodeAggregatorTreeNodeVisitor.cs" />
@@ -515,6 +517,7 @@
     <Compile Include="Models\Interfaces\IEntityFilterGroup.cs" />
     <Compile Include="Models\Interfaces\IHasNotes.cs" />
     <Compile Include="Models\Interfaces\INote.cs" />
+    <Compile Include="Models\Interfaces\IShipZone.cs" />
     <Compile Include="Models\Note.cs" />
     <Compile Include="Models\EntityCollectionExtensions.cs" />
     <Compile Include="Models\Interfaces\ICurrencyFormat.cs" />
@@ -583,6 +586,7 @@
     <Compile Include="Models\Rdbms\EntityCollectionDto.cs" />
     <Compile Include="Models\Rdbms\ProductOptionAttributeShareDto.cs" />
     <Compile Include="Models\Rdbms\ProductVariantDetachedContentDto.cs" />
+    <Compile Include="Models\Rdbms\ShipZoneDto.cs" />
     <Compile Include="Models\ShipmentStatus.cs" />
     <Compile Include="Models\MonitorModels\INotifyModel.cs" />
     <Compile Include="Models\MonitorModels\MonitorModelExtensions.cs" />
@@ -601,6 +605,7 @@
     <Compile Include="Models\Rdbms\IPageableDto.cs" />
     <Compile Include="Models\Rdbms\ShipmentStatusDto.cs" />
     <Compile Include="Models\EntityFilterCollection.cs" />
+    <Compile Include="Models\ShipZone.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="NotificationExtensions.cs" />
     <Compile Include="Observation\IMonitor.cs" />
