Initial progress commit for ShippingZones

--- a/src/Merchello.Core/Merchello.Core.csproj
+++ b/src/Merchello.Core/Merchello.Core.csproj
@@ -399,8 +399,14 @@
     <Compile Include="Strategies\Itemization\InvoiceItemizationExtensions.cs" />
     <Compile Include="Strategies\Itemization\InvoiceItemizationStrategyBase.cs" />
     <Compile Include="Strategies\Itemization\ProductBasedTaxationVisitor.cs" />
+    <Compile Include="Persistence\Factories\ShipZoneFactory.cs" />
+    <Compile Include="Persistence\Mappers\ShipZoneMapper.cs" />
     <Compile Include="Persistence\Migrations\Upgrades\TargetVersionTwoFourZero\AddShipZoneKeyColumn.cs" />
     <Compile Include="Persistence\Migrations\Upgrades\TargetVersionTwoFourZero\CreateShipZoneTable.cs" />
+    <Compile Include="Persistence\Repositories\Interfaces\IShipZoneRepository.cs" />
+    <Compile Include="Persistence\Repositories\ShipZoneRepository.cs" />
+    <Compile Include="Services\Interfaces\IShipZoneService.cs" />
+    <Compile Include="Services\ShipZoneService.cs" />
     <Compile Include="Trees\FirstByValueTreeNodeVisitor.cs" />
     <Compile Include="Trees\ITreeNodeVisitor.cs" />
     <Compile Include="Trees\NodeAggregatorTreeNodeVisitor.cs" />
