--- a/src/Merchello.FastTrack.Ui/App_Data/umbraco.config
+++ b/src/Merchello.FastTrack.Ui/App_Data/umbraco.config
@@ -1,96 +1,65 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT fastTrack ANY>
-<!ATTLIST fastTrack id ID #REQUIRED>
-<!ELEMENT ftAccount ANY>
-<!ATTLIST ftAccount id ID #REQUIRED>
-<!ELEMENT ftBasket ANY>
-<!ATTLIST ftBasket id ID #REQUIRED>
-<!ELEMENT ftCatalog ANY>
-<!ATTLIST ftCatalog id ID #REQUIRED>
-<!ELEMENT ftCategory ANY>
-<!ATTLIST ftCategory id ID #REQUIRED>
-<!ELEMENT ftCheckout ANY>
-<!ATTLIST ftCheckout id ID #REQUIRED>
-<!ELEMENT ftLogin ANY>
-<!ATTLIST ftLogin id ID #REQUIRED>
-<!ELEMENT ftProduct ANY>
-<!ATTLIST ftProduct id ID #REQUIRED>
-<!ELEMENT ftReceipt ANY>
-<!ATTLIST ftReceipt id ID #REQUIRED>
-<!ELEMENT ftStore ANY>
-<!ATTLIST ftStore id ID #REQUIRED>
-<!ELEMENT tests ANY>
-<!ATTLIST tests id ID #REQUIRED>
-<!ELEMENT ftChangePassword ANY>
-<!ATTLIST ftChangePassword id ID #REQUIRED>
-<!ELEMENT ftForgotPassword ANY>
-<!ATTLIST ftForgotPassword id ID #REQUIRED>
+<!DOCTYPE root [<!ELEMENT compositionContent ANY>
+<!ATTLIST compositionContent id ID #REQUIRED>
+<!ELEMENT compositionMeta ANY>
+<!ATTLIST compositionMeta id ID #REQUIRED>
+<!ELEMENT basket ANY>
+<!ATTLIST basket id ID #REQUIRED>
+<!ELEMENT catalog ANY>
+<!ATTLIST catalog id ID #REQUIRED>
+<!ELEMENT category ANY>
+<!ATTLIST category id ID #REQUIRED>
+<!ELEMENT CompositionUmbracoFields ANY>
+<!ATTLIST CompositionUmbracoFields id ID #REQUIRED>
+<!ELEMENT account ANY>
+<!ATTLIST account id ID #REQUIRED>
+<!ELEMENT checkout ANY>
+<!ATTLIST checkout id ID #REQUIRED>
+<!ELEMENT login ANY>
+<!ATTLIST login id ID #REQUIRED>
+<!ELEMENT product ANY>
+<!ATTLIST product id ID #REQUIRED>
+<!ELEMENT receipt ANY>
+<!ATTLIST receipt id ID #REQUIRED>
+<!ELEMENT store ANY>
+<!ATTLIST store id ID #REQUIRED>
 ]>
 <root id="-1">
-  <ftStore id="1083" key="8855af7f-fb0c-44b4-bc75-d7bb7e1d0250" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-08-05T12:50:05" updateDate="2016-09-08T09:07:02" nodeName="Home" urlName="home" path="-1,1083" isDoc="" nodeType="1079" creatorName="admin" writerName="admin" writerID="0" template="1078" nodeTypeAlias="ftStore">
-    <umbracoNaviHide>0</umbracoNaviHide>
-    <brief><![CDATA[<p><span>Example store which has been developed to help get you up and running quickly with Merchello. It's designed to show you how to implement common features, and </span><span>you can grab the source code from here</span><span>, just fork/clone/download and open up Merchello.sln</span></p>]]></brief>
-    <featuredProducts><![CDATA[696b698d-a897-434c-b749-163d121b4193]]></featuredProducts>
+  <store id="1091" key="1aa87d6a-94cc-41dd-a6ba-1ba7e5f3b891" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Store" urlName="store" path="-1,1091" isDoc="" nodeType="1081" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1069" nodeTypeAlias="store">
+    <brief><![CDATA[<p>Example store which has been developed to help get you up and running quickly with Merchello. 
+                                            It's designed to show you how to implement common features, and you can grab the source code from here, just fork/clone/download and open up Merchello.sln</p>]]></brief>
     <storeName><![CDATA[FastTrack Store]]></storeName>
-    <ftCatalog id="1084" key="e3712a0e-1fa7-4ea1-818d-cd16bb5d0a57" parentID="1083" level="2" creatorID="0" sortOrder="0" createDate="2016-08-05T12:51:58" updateDate="2016-08-11T15:07:38" nodeName="Catalog" urlName="catalog" path="-1,1083,1084" isDoc="" nodeType="1059" creatorName="admin" writerName="admin" writerID="0" template="1058" nodeTypeAlias="ftCatalog">
-      <umbracoNaviHide>0</umbracoNaviHide>
-      <categories><![CDATA[8d50adde-bb9d-429f-889d-4cac80921ba3]]></categories>
-      <ftCategory id="1090" key="1847d152-daff-4211-8e07-931ccf0b8159" parentID="1084" level="3" creatorID="0" sortOrder="0" createDate="2016-08-05T12:57:21" updateDate="2016-08-11T15:22:41" nodeName="Funny T-Shirts" urlName="funny-t-shirts" path="-1,1083,1084,1090" isDoc="" nodeType="1061" creatorName="admin" writerName="admin" writerID="0" template="1060" nodeTypeAlias="ftCategory">
-        <umbracoNaviHide>0</umbracoNaviHide>
-        <products><![CDATA[8d0c273b-1626-4bb3-942b-489d94b304ae]]></products>
-      </ftCategory>
-      <ftCategory id="1091" key="5a6ec2a0-53c3-43ae-8dc5-4ac785f8e6ae" parentID="1084" level="3" creatorID="0" sortOrder="1" createDate="2016-08-05T12:57:38" updateDate="2016-08-11T15:22:49" nodeName="Geeky T-Shirts" urlName="geeky-t-shirts" path="-1,1083,1084,1091" isDoc="" nodeType="1061" creatorName="admin" writerName="admin" writerID="0" template="1060" nodeTypeAlias="ftCategory">
-        <umbracoNaviHide>0</umbracoNaviHide>
-        <products><![CDATA[2abbd4f9-7c9f-41c7-9add-ea723d8836c4]]></products>
-      </ftCategory>
-      <ftCategory id="1092" key="c7328746-cd9e-4110-aff3-f5ea079e1be7" parentID="1084" level="3" creatorID="0" sortOrder="2" createDate="2016-08-05T12:58:14" updateDate="2016-08-11T15:22:58" nodeName="Sad T-Shirts" urlName="sad-t-shirts" path="-1,1083,1084,1092" isDoc="" nodeType="1061" creatorName="admin" writerName="admin" writerID="0" template="1060" nodeTypeAlias="ftCategory">
-        <umbracoNaviHide>0</umbracoNaviHide>
-        <products><![CDATA[4dfb471a-ee5a-4067-80db-b618873b729a]]></products>
-      </ftCategory>
-    </ftCatalog>
-    <ftBasket id="1085" key="9240a057-3155-40e1-b80a-f2798e4677a7" parentID="1083" level="2" creatorID="0" sortOrder="1" createDate="2016-08-05T12:52:10" updateDate="2016-08-11T15:08:57" nodeName="Basket" urlName="basket" path="-1,1083,1085" isDoc="" nodeType="1057" creatorName="admin" writerName="admin" writerID="0" template="1056" nodeTypeAlias="ftBasket">
-      <umbracoNaviHide>0</umbracoNaviHide>
-      <pageTitle><![CDATA[Your Merchello Basket]]></pageTitle>
-      <metaDescription><![CDATA[An example Merchello basket page]]></metaDescription>
-    </ftBasket>
-    <ftCheckout id="1086" key="3d4dea55-ec60-4c81-ac1b-45c9cb6bdf63" parentID="1083" level="2" creatorID="0" sortOrder="2" createDate="2016-08-05T12:54:51" updateDate="2016-08-11T15:09:10" nodeName="Checkout" urlName="checkout" path="-1,1083,1086" isDoc="" nodeType="1063" creatorName="admin" writerName="admin" writerID="0" template="1113" nodeTypeAlias="ftCheckout">
-      <umbracoNaviHide>0</umbracoNaviHide>
+    <featuredProducts><![CDATA[943bcd5c-a3ea-4a56-a7f9-ac553211281e]]></featuredProducts>
+    <catalog id="1092" key="8e7b51a3-6140-410a-868e-6fee763fb391" parentID="1091" level="2" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Catalog" urlName="catalog" path="-1,1091,1092" isDoc="" nodeType="1073" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1056" nodeTypeAlias="catalog">
+      <categories><![CDATA[965b9e12-4bc1-4c76-8e94-2e78706e20c3]]></categories>
+      <category id="1093" key="c01352d0-f496-490c-aca3-cd76d7245e29" parentID="1092" level="3" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Funny T-Shirts" urlName="funny-t-shirts" path="-1,1091,1092,1093" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
+        <products><![CDATA[4c4632e5-2161-4404-a2f7-3bb1c579d1fd]]></products>
+      </category>
+      <category id="1094" key="37397096-16c5-4c34-bb79-753192c34c8d" parentID="1092" level="3" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Geeky T-Shirts" urlName="geeky-t-shirts" path="-1,1091,1092,1094" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
+        <products><![CDATA[cd27abbf-1f68-4a5d-89f4-07de17103a73]]></products>
+      </category>
+      <category id="1095" key="ef281c67-8507-4dd2-857b-36090a37b699" parentID="1092" level="3" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Sad T-Shirts" urlName="sad-t-shirts" path="-1,1091,1092,1095" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
+        <products><![CDATA[5f125f50-45da-418d-95cd-ad476fe0873a]]></products>
+      </category>
+    </catalog>
+    <basket id="1096" key="f1d74c10-d067-4ca7-8296-5428883e041d" parentID="1091" level="2" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Basket" urlName="basket" path="-1,1091,1096" isDoc="" nodeType="1072" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1054" nodeTypeAlias="basket" />
+    <checkout id="1097" key="a1c83832-aa9c-40d8-97de-2d0a9e31bdda" parentID="1091" level="2" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Checkout" urlName="checkout" path="-1,1091,1097" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1055" nodeTypeAlias="checkout">
       <checkoutStage><![CDATA[BillingAddress]]></checkoutStage>
-      <ftCheckout id="1105" key="a3ece120-9cc5-4ebb-b3d7-2ec7a7882850" parentID="1086" level="3" creatorID="0" sortOrder="0" createDate="2016-08-08T11:33:33" updateDate="2016-08-11T15:09:17" nodeName="Shipping Address" urlName="shipping-address" path="-1,1083,1086,1105" isDoc="" nodeType="1063" creatorName="admin" writerName="admin" writerID="0" template="1115" nodeTypeAlias="ftCheckout">
-        <umbracoNaviHide>0</umbracoNaviHide>
+      <checkout id="1098" key="ca1c2be0-c07a-4eb6-9b2b-0b76675366bf" parentID="1097" level="3" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Shipping Address" urlName="shipping-address" path="-1,1091,1097,1098" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1068" nodeTypeAlias="checkout">
         <checkoutStage><![CDATA[ShippingAddress]]></checkoutStage>
-      </ftCheckout>
-      <ftCheckout id="1106" key="a29b6978-2010-4f3b-b761-16dd70a71764" parentID="1086" level="3" creatorID="0" sortOrder="1" createDate="2016-08-08T11:33:50" updateDate="2016-08-11T15:09:24" nodeName="Ship Rate Quote" urlName="ship-rate-quote" path="-1,1083,1086,1106" isDoc="" nodeType="1063" creatorName="admin" writerName="admin" writerID="0" template="1114" nodeTypeAlias="ftCheckout">
-        <umbracoNaviHide>0</umbracoNaviHide>
+      </checkout>
+      <checkout id="1099" key="5f794628-b52a-4ef6-b3e2-35b077636f05" parentID="1097" level="3" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Ship Rate Quote" urlName="ship-rate-quote" path="-1,1091,1097,1099" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1067" nodeTypeAlias="checkout">
         <checkoutStage><![CDATA[ShipRateQuote]]></checkoutStage>
-      </ftCheckout>
-      <ftCheckout id="1107" key="85ab3ee8-dd75-463e-87d2-8c5677ded7a5" parentID="1086" level="3" creatorID="0" sortOrder="2" createDate="2016-08-08T11:34:14" updateDate="2016-08-11T15:09:33" nodeName="Payment Method" urlName="payment-method" path="-1,1083,1086,1107" isDoc="" nodeType="1063" creatorName="admin" writerName="admin" writerID="0" template="1112" nodeTypeAlias="ftCheckout">
-        <umbracoNaviHide>0</umbracoNaviHide>
+      </checkout>
+      <checkout id="1100" key="02b04af6-1622-44b6-bb7c-3602b1094ea8" parentID="1097" level="3" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Payment Method" urlName="payment-method" path="-1,1091,1097,1100" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1063" nodeTypeAlias="checkout">
         <checkoutStage><![CDATA[PaymentMethod]]></checkoutStage>
-      </ftCheckout>
-      <ftCheckout id="1108" key="fea73374-0226-41d2-aca4-bb993551e683" parentID="1086" level="3" creatorID="0" sortOrder="3" createDate="2016-08-08T11:34:34" updateDate="2016-08-11T15:09:41" nodeName="Payment" urlName="payment" path="-1,1083,1086,1108" isDoc="" nodeType="1063" creatorName="admin" writerName="admin" writerID="0" template="1111" nodeTypeAlias="ftCheckout">
-        <umbracoNaviHide>0</umbracoNaviHide>
+      </checkout>
+      <checkout id="1101" key="e459e356-cd54-4e10-9b9e-cf98607943bf" parentID="1097" level="3" creatorID="0" sortOrder="3" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Payment" urlName="payment" path="-1,1091,1097,1101" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1062" nodeTypeAlias="checkout">
         <checkoutStage><![CDATA[Payment]]></checkoutStage>
-      </ftCheckout>
-    </ftCheckout>
-    <ftReceipt id="1087" key="2eb3752d-34ff-4da8-91d1-15548334da34" parentID="1083" level="2" creatorID="0" sortOrder="3" createDate="2016-08-05T12:55:07" updateDate="2016-08-11T15:10:04" nodeName="Receipt" urlName="receipt" path="-1,1083,1087" isDoc="" nodeType="1077" creatorName="admin" writerName="admin" writerID="0" template="1076" nodeTypeAlias="ftReceipt">
-      <umbracoNaviHide>1</umbracoNaviHide>
-      <headline><![CDATA[Thank you for your order]]></headline>
-    </ftReceipt>
-    <ftLogin id="1088" key="9ed56784-8e21-447d-84e2-5f23bb73667d" parentID="1083" level="2" creatorID="0" sortOrder="4" createDate="2016-08-05T12:55:28" updateDate="2016-08-11T15:10:22" nodeName="Login" urlName="login" path="-1,1083,1088" isDoc="" nodeType="1065" creatorName="admin" writerName="admin" writerID="0" template="1064" nodeTypeAlias="ftLogin">
-      <umbracoNaviHide>0</umbracoNaviHide>
-      <headline><![CDATA[Login or Create Account]]></headline>
-    </ftLogin>
-    <ftAccount id="1089" key="976d4720-3126-40af-b2f9-a1071bb9875b" parentID="1083" level="2" creatorID="0" sortOrder="5" createDate="2016-08-05T12:55:39" updateDate="2016-08-11T15:10:45" nodeName="Account" urlName="account" path="-1,1083,1089" isDoc="" nodeType="1052" creatorName="admin" writerName="admin" writerID="0" template="1051" nodeTypeAlias="ftAccount">
-      <umbracoNaviHide>0</umbracoNaviHide>
-      <headline><![CDATA[My Account]]></headline>
-      <ftChangePassword id="1125" key="c0ffb1b5-9422-4628-b3ba-d746ae1a7bf4" parentID="1089" level="3" creatorID="0" sortOrder="0" createDate="2016-09-26T14:37:03" updateDate="2016-09-26T16:16:20" nodeName="Change Password" urlName="change-password" path="-1,1083,1089,1125" isDoc="" nodeType="1120" creatorName="admin" writerName="admin" writerID="0" template="1122" nodeTypeAlias="ftChangePassword">
-        <umbracoNaviHide>0</umbracoNaviHide>
-      </ftChangePassword>
-    </ftAccount>
-    <tests id="1119" key="15734987-79b4-435f-8173-e63ed83780ad" parentID="1083" level="2" creatorID="0" sortOrder="6" createDate="2016-09-03T07:47:59" updateDate="2016-09-03T07:47:59" nodeName="Test" urlName="test" path="-1,1083,1119" isDoc="" nodeType="1118" creatorName="admin" writerName="admin" writerID="0" template="1117" nodeTypeAlias="tests" />
-    <ftForgotPassword id="1124" key="9218d4e6-32b3-4dce-b02e-f52aa010b7d7" parentID="1083" level="2" creatorID="0" sortOrder="7" createDate="2016-09-26T14:35:29" updateDate="2016-09-26T16:16:15" nodeName="Forgot Password" urlName="forgot-password" path="-1,1083,1124" isDoc="" nodeType="1121" creatorName="admin" writerName="admin" writerID="0" template="1123" nodeTypeAlias="ftForgotPassword">
-      <umbracoNaviHide>0</umbracoNaviHide>
-    </ftForgotPassword>
-  </ftStore>
+      </checkout>
+    </checkout>
+    <receipt id="1102" key="494f64b1-1331-43ef-86e4-51e3586bd2c4" parentID="1091" level="2" creatorID="0" sortOrder="3" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Receipt" urlName="receipt" path="-1,1091,1102" isDoc="" nodeType="1080" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1066" nodeTypeAlias="receipt" />
+    <login id="1103" key="3d0d399b-720f-4985-a9a9-ce2b8e7e09d7" parentID="1091" level="2" creatorID="0" sortOrder="4" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Login" urlName="login" path="-1,1091,1103" isDoc="" nodeType="1078" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1053" nodeTypeAlias="login" />
+    <account id="1104" key="72f2c7c7-10c1-4da6-8207-8251b880168b" parentID="1091" level="2" creatorID="0" sortOrder="5" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Account" urlName="account" path="-1,1091,1104" isDoc="" nodeType="1076" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1052" nodeTypeAlias="account" />
+  </store>
 </root>
