--- a/src/Merchello.Web/Merchello.Web.csproj
+++ b/src/Merchello.Web/Merchello.Web.csproj
@@ -284,6 +284,7 @@
     <Compile Include="Caching\IVirtualContentCache{T}.cs" />
     <Compile Include="Caching\IVirtualProductContentCache.cs" />
     <Compile Include="Models\ContentEditing\InvoiceItemItemizationDisplay.cs" />
+    <Compile Include="Models\ContentEditing\ShipZoneDisplay.cs" />
     <Compile Include="Models\PrimedProductFilter.cs" />
     <Compile Include="Search\CachedQueryBase.cs" />
     <Compile Include="Search\IProductContentQuery.cs" />
