Pushing work in progress so I have it whilst I'm away!

--- a/src/Merchello.FastTrack.Ui/App_Data/umbraco.config
+++ b/src/Merchello.FastTrack.Ui/App_Data/umbraco.config
@@ -1,65 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT compositionContent ANY>
-<!ATTLIST compositionContent id ID #REQUIRED>
-<!ELEMENT compositionMeta ANY>
-<!ATTLIST compositionMeta id ID #REQUIRED>
-<!ELEMENT basket ANY>
-<!ATTLIST basket id ID #REQUIRED>
-<!ELEMENT catalog ANY>
-<!ATTLIST catalog id ID #REQUIRED>
-<!ELEMENT category ANY>
-<!ATTLIST category id ID #REQUIRED>
-<!ELEMENT CompositionUmbracoFields ANY>
-<!ATTLIST CompositionUmbracoFields id ID #REQUIRED>
-<!ELEMENT account ANY>
-<!ATTLIST account id ID #REQUIRED>
-<!ELEMENT checkout ANY>
-<!ATTLIST checkout id ID #REQUIRED>
-<!ELEMENT login ANY>
-<!ATTLIST login id ID #REQUIRED>
-<!ELEMENT product ANY>
-<!ATTLIST product id ID #REQUIRED>
-<!ELEMENT receipt ANY>
-<!ATTLIST receipt id ID #REQUIRED>
-<!ELEMENT store ANY>
-<!ATTLIST store id ID #REQUIRED>
+<!DOCTYPE root [<!ELEMENT fastTrack ANY>
+<!ATTLIST fastTrack id ID #REQUIRED>
+<!ELEMENT ftAccount ANY>
+<!ATTLIST ftAccount id ID #REQUIRED>
+<!ELEMENT ftBasket ANY>
+<!ATTLIST ftBasket id ID #REQUIRED>
+<!ELEMENT ftCatalog ANY>
+<!ATTLIST ftCatalog id ID #REQUIRED>
+<!ELEMENT ftCategory ANY>
+<!ATTLIST ftCategory id ID #REQUIRED>
+<!ELEMENT ftCheckout ANY>
+<!ATTLIST ftCheckout id ID #REQUIRED>
+<!ELEMENT ftLogin ANY>
+<!ATTLIST ftLogin id ID #REQUIRED>
+<!ELEMENT ftProduct ANY>
+<!ATTLIST ftProduct id ID #REQUIRED>
+<!ELEMENT ftReceipt ANY>
+<!ATTLIST ftReceipt id ID #REQUIRED>
+<!ELEMENT ftStore ANY>
+<!ATTLIST ftStore id ID #REQUIRED>
 ]>
 <root id="-1">
-  <store id="1091" key="1aa87d6a-94cc-41dd-a6ba-1ba7e5f3b891" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Store" urlName="store" path="-1,1091" isDoc="" nodeType="1081" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1069" nodeTypeAlias="store">
+  <ftStore id="1089" key="148c3983-3135-4999-bb1c-a5dc8853273c" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-10-25T12:52:29" updateDate="2016-10-25T12:52:29" nodeName="Store" urlName="store" path="-1,1089" isDoc="" nodeType="1079" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1064" nodeTypeAlias="ftStore">
     <brief><![CDATA[<p>Example store which has been developed to help get you up and running quickly with Merchello. 
                                             It's designed to show you how to implement common features, and you can grab the source code from here, just fork/clone/download and open up Merchello.sln</p>]]></brief>
+    <featuredProducts><![CDATA[cc11a417-140c-4417-b08a-a9f41e068ce0]]></featuredProducts>
     <storeName><![CDATA[FastTrack Store]]></storeName>
-    <featuredProducts><![CDATA[943bcd5c-a3ea-4a56-a7f9-ac553211281e]]></featuredProducts>
-    <catalog id="1092" key="8e7b51a3-6140-410a-868e-6fee763fb391" parentID="1091" level="2" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Catalog" urlName="catalog" path="-1,1091,1092" isDoc="" nodeType="1073" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1056" nodeTypeAlias="catalog">
-      <categories><![CDATA[965b9e12-4bc1-4c76-8e94-2e78706e20c3]]></categories>
-      <category id="1093" key="c01352d0-f496-490c-aca3-cd76d7245e29" parentID="1092" level="3" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Funny T-Shirts" urlName="funny-t-shirts" path="-1,1091,1092,1093" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
-        <products><![CDATA[4c4632e5-2161-4404-a2f7-3bb1c579d1fd]]></products>
-      </category>
-      <category id="1094" key="37397096-16c5-4c34-bb79-753192c34c8d" parentID="1092" level="3" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Geeky T-Shirts" urlName="geeky-t-shirts" path="-1,1091,1092,1094" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
-        <products><![CDATA[cd27abbf-1f68-4a5d-89f4-07de17103a73]]></products>
-      </category>
-      <category id="1095" key="ef281c67-8507-4dd2-857b-36090a37b699" parentID="1092" level="3" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Sad T-Shirts" urlName="sad-t-shirts" path="-1,1091,1092,1095" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="category">
-        <products><![CDATA[5f125f50-45da-418d-95cd-ad476fe0873a]]></products>
-      </category>
-    </catalog>
-    <basket id="1096" key="f1d74c10-d067-4ca7-8296-5428883e041d" parentID="1091" level="2" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Basket" urlName="basket" path="-1,1091,1096" isDoc="" nodeType="1072" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1054" nodeTypeAlias="basket" />
-    <checkout id="1097" key="a1c83832-aa9c-40d8-97de-2d0a9e31bdda" parentID="1091" level="2" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Checkout" urlName="checkout" path="-1,1091,1097" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1055" nodeTypeAlias="checkout">
+    <ftCatalog id="1090" key="65d77c24-fe11-4347-ad8e-7a44b625559b" parentID="1089" level="2" creatorID="0" sortOrder="0" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Catalog" urlName="catalog" path="-1,1089,1090" isDoc="" nodeType="1073" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1058" nodeTypeAlias="ftCatalog">
+      <categories><![CDATA[68bf0278-608f-4099-913b-dcc63d452b52]]></categories>
+      <ftCategory id="1091" key="a09370d1-efdb-4dd1-94ca-ec68aedcbbfe" parentID="1090" level="3" creatorID="0" sortOrder="0" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Funny T-Shirts" urlName="funny-t-shirts" path="-1,1089,1090,1091" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1059" nodeTypeAlias="ftCategory">
+        <products><![CDATA[c059948d-5a2f-4d6e-8436-258caf7d7c52]]></products>
+      </ftCategory>
+      <ftCategory id="1092" key="b5ccbf27-42c4-4cb0-911d-43e59a2d2587" parentID="1090" level="3" creatorID="0" sortOrder="1" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Geeky T-Shirts" urlName="geeky-t-shirts" path="-1,1089,1090,1092" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1059" nodeTypeAlias="ftCategory">
+        <products><![CDATA[7a6a647f-4033-4987-b3d1-014ac5677135]]></products>
+      </ftCategory>
+      <ftCategory id="1093" key="b1478148-691b-4d00-a04a-173030d96bb8" parentID="1090" level="3" creatorID="0" sortOrder="2" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Sad T-Shirts" urlName="sad-t-shirts" path="-1,1089,1090,1093" isDoc="" nodeType="1074" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1059" nodeTypeAlias="ftCategory">
+        <products><![CDATA[70ae1de0-c691-4c15-acaf-efb505c134e6]]></products>
+      </ftCategory>
+    </ftCatalog>
+    <ftBasket id="1094" key="6064f0f0-052d-4ff8-8177-f4946faa8fa1" parentID="1089" level="2" creatorID="0" sortOrder="1" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Basket" urlName="basket" path="-1,1089,1094" isDoc="" nodeType="1072" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1057" nodeTypeAlias="ftBasket" />
+    <ftCheckout id="1095" key="b6ce26b8-76a9-4741-bbfe-03a30f9d6990" parentID="1089" level="2" creatorID="0" sortOrder="2" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Checkout" urlName="checkout" path="-1,1089,1095" isDoc="" nodeType="1075" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1053" nodeTypeAlias="ftCheckout">
       <checkoutStage><![CDATA[BillingAddress]]></checkoutStage>
-      <checkout id="1098" key="ca1c2be0-c07a-4eb6-9b2b-0b76675366bf" parentID="1097" level="3" creatorID="0" sortOrder="0" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Shipping Address" urlName="shipping-address" path="-1,1091,1097,1098" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1068" nodeTypeAlias="checkout">
+      <ftCheckout id="1096" key="c9ed7766-ce87-4f38-a2b2-0401556aee9f" parentID="1095" level="3" creatorID="0" sortOrder="0" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Shipping Address" urlName="shipping-address" path="-1,1089,1095,1096" isDoc="" nodeType="1075" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1069" nodeTypeAlias="ftCheckout">
         <checkoutStage><![CDATA[ShippingAddress]]></checkoutStage>
-      </checkout>
-      <checkout id="1099" key="5f794628-b52a-4ef6-b3e2-35b077636f05" parentID="1097" level="3" creatorID="0" sortOrder="1" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Ship Rate Quote" urlName="ship-rate-quote" path="-1,1091,1097,1099" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1067" nodeTypeAlias="checkout">
+      </ftCheckout>
+      <ftCheckout id="1097" key="fbd90471-ae72-49ec-b1df-7a0fae7e2325" parentID="1095" level="3" creatorID="0" sortOrder="1" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Ship Rate Quote" urlName="ship-rate-quote" path="-1,1089,1095,1097" isDoc="" nodeType="1075" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1068" nodeTypeAlias="ftCheckout">
         <checkoutStage><![CDATA[ShipRateQuote]]></checkoutStage>
-      </checkout>
-      <checkout id="1100" key="02b04af6-1622-44b6-bb7c-3602b1094ea8" parentID="1097" level="3" creatorID="0" sortOrder="2" createDate="2016-06-16T16:38:44" updateDate="2016-06-16T16:38:44" nodeName="Payment Method" urlName="payment-method" path="-1,1091,1097,1100" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1063" nodeTypeAlias="checkout">
+      </ftCheckout>
+      <ftCheckout id="1098" key="4fcbd647-229b-4885-8c8a-fd71dc8640b3" parentID="1095" level="3" creatorID="0" sortOrder="2" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Payment Method" urlName="payment-method" path="-1,1089,1095,1098" isDoc="" nodeType="1075" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1066" nodeTypeAlias="ftCheckout">
         <checkoutStage><![CDATA[PaymentMethod]]></checkoutStage>
-      </checkout>
-      <checkout id="1101" key="e459e356-cd54-4e10-9b9e-cf98607943bf" parentID="1097" level="3" creatorID="0" sortOrder="3" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Payment" urlName="payment" path="-1,1091,1097,1101" isDoc="" nodeType="1077" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1062" nodeTypeAlias="checkout">
+      </ftCheckout>
+      <ftCheckout id="1099" key="3609525d-370b-416e-8a84-c8fcfa600848" parentID="1095" level="3" creatorID="0" sortOrder="3" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Payment" urlName="payment" path="-1,1089,1095,1099" isDoc="" nodeType="1075" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1065" nodeTypeAlias="ftCheckout">
         <checkoutStage><![CDATA[Payment]]></checkoutStage>
-      </checkout>
-    </checkout>
-    <receipt id="1102" key="494f64b1-1331-43ef-86e4-51e3586bd2c4" parentID="1091" level="2" creatorID="0" sortOrder="3" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Receipt" urlName="receipt" path="-1,1091,1102" isDoc="" nodeType="1080" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1066" nodeTypeAlias="receipt" />
-    <login id="1103" key="3d0d399b-720f-4985-a9a9-ce2b8e7e09d7" parentID="1091" level="2" creatorID="0" sortOrder="4" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Login" urlName="login" path="-1,1091,1103" isDoc="" nodeType="1078" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1053" nodeTypeAlias="login" />
-    <account id="1104" key="72f2c7c7-10c1-4da6-8207-8251b880168b" parentID="1091" level="2" creatorID="0" sortOrder="5" createDate="2016-06-16T16:38:45" updateDate="2016-06-16T16:38:45" nodeName="Account" urlName="account" path="-1,1091,1104" isDoc="" nodeType="1076" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1052" nodeTypeAlias="account" />
-  </store>
+      </ftCheckout>
+    </ftCheckout>
+    <ftReceipt id="1100" key="7550a7a8-085e-4b3f-99a7-871d0ee53eb3" parentID="1089" level="2" creatorID="0" sortOrder="3" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Receipt" urlName="receipt" path="-1,1089,1100" isDoc="" nodeType="1078" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1063" nodeTypeAlias="ftReceipt" />
+    <ftLogin id="1101" key="8768d384-d04c-40cc-9997-ddd6c638e8a6" parentID="1089" level="2" creatorID="0" sortOrder="4" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Login" urlName="login" path="-1,1089,1101" isDoc="" nodeType="1076" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1061" nodeTypeAlias="ftLogin" />
+    <ftAccount id="1102" key="fe063e7e-1092-4c42-ad6f-124c162968d7" parentID="1089" level="2" creatorID="0" sortOrder="5" createDate="2016-10-25T12:52:30" updateDate="2016-10-25T12:52:30" nodeName="Account" urlName="account" path="-1,1089,1102" isDoc="" nodeType="1071" creatorName="Simon Dingley" writerName="Simon Dingley" writerID="0" template="1056" nodeTypeAlias="ftAccount" />
+  </ftStore>
 </root>
