--- a/src/Merchello.Core/Merchello.Core.csproj
+++ b/src/Merchello.Core/Merchello.Core.csproj
@@ -387,7 +387,9 @@
     <Compile Include="Persistence\Migrations\Upgrades\TargetVersionTwoFourZero\CreateShipZoneTable.cs" />
     <Compile Include="Persistence\Repositories\Interfaces\IShipZoneRepository.cs" />
     <Compile Include="Persistence\Repositories\ShipZoneRepository.cs" />
+    <Compile Include="Services\Interfaces\IShipZoneCountryService.cs" />
     <Compile Include="Services\Interfaces\IShipZoneService.cs" />
+    <Compile Include="Services\ShipZoneCountryService.cs" />
     <Compile Include="Services\ShipZoneService.cs" />
     <Compile Include="Trees\FirstByValueTreeNodeVisitor.cs" />
     <Compile Include="Trees\ITreeNodeVisitor.cs" />
