--- a/src/Merchello.Web/Merchello.Web.csproj
+++ b/src/Merchello.Web/Merchello.Web.csproj
@@ -282,6 +282,7 @@
     <Compile Include="ApplicationContextExtensions.cs" />
     <Compile Include="Caching\IVirtualContentCache{T}.cs" />
     <Compile Include="Caching\IVirtualProductContentCache.cs" />
+    <Compile Include="Editors\ShippingZoneGatewayController.cs" />
     <Compile Include="Models\ContentEditing\ShipZoneDisplay.cs" />
     <Compile Include="Models\PrimedProductFilter.cs" />
     <Compile Include="Search\CachedQueryBase.cs" />
